# cargo-lsif

./: Cargo.toml  README.md
.github/workflows/: linting.yml
.reuse/: dep5
src/: lib.rs  save_analysis.rs
tools/: reuse.sh
