# SPDX-FileCopyrightText: 2020 Apache-2.0
# SPDX-FileCopyrightText: 2020 Wyatt Calandro <arm1stice@arm1stice.com>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cargo-lsif"
version = "0.1.0"
authors = ["Wyatt Calandro <arm1stice@arm1stice.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
